Worked on mobile menu, added fixes to the forms

--- a/src/assets/styles/modules/_header.scss
+++ b/src/assets/styles/modules/_header.scss
@@ -148,6 +148,10 @@
     font-size: 18px;
     line-height: 25px;
     white-space: nowrap; // ?
+
+    @media (max-width: $breakpoint - 1px) {
+      font-size: 16px;
+    }
   }
 
   &__drop {
